first version with a somewhat functioning storage mechanism

--- a/svg-edit-gadget/svg-editor.html
+++ b/svg-edit-gadget/svg-editor.html
@@ -25,9 +25,9 @@
 <script type="text/javascript" src="spinbtn/JQuerySpinBtn.min.js"></script>
 <script type="text/javascript" src="touch.js"></script>
 
-<!--{if svg_edit_release}-->
+<!--{if svg_edit_release}>
   <script type="text/javascript" src="svgedit.compiled.js"></script>
-<!--{else}>
+<!--{else} -->
   <script type="text/javascript" src="contextmenu/jquery.contextMenu.js"></script>
   <script type="text/javascript" src="browser.js"></script>
   <script type="text/javascript" src="svgtransformlist.js"></script>
